# treediculous

./: .amlignore  .gitignore  CHANGELOG.md  README.md  api.Dockerfile  cz.toml  docker-compose.yml  pyproject.toml  setup_credentials.sh
.github/workflows/: deployment.yml  ml-pipeline.yml  new-api-version.yml  new-web-version.yml
api/: .gitignore  CHANGELOG.md  Dockerfile  cz.toml  pyproject.toml
api/app/: main.py
api/app/routers/: infer.py
api/app/schemas/: response.py
app/: main.py  model.py  splitter.py  test.py  training.py
app/routers/: infer.py
deployment/: .gitignore  .terraform-docs.yml  .terraform.lock.hcl  .tflint.hcl  README.md  backend.tf  example.tfvars  main.tf  outputs.tf  variables.tf  versions.tf
model/: .amlignore  .dockerignore  .gitignore  Dockerfile  pyproject.toml  test.py
model/app/: image_loader.py  model.py  preprocessing.py
model/model/: model.py  training.py
model/pipeline/: dataset-images.yml  run_download_model.sh  run_upload_images.sh  run_upload_labels.sh
model/pipeline/labels/: project-1-at-2024-12-28-13-38-0d340661.json
model/pipeline/preprocessing/: command.yml
model/pipeline/splitting/: command.py  command.yml
model/pipeline/training/: command.yml
pipeline/: .gitignore  Dockerfile  azureml_run_download_model.py  azureml_run_pipeline.py  build-pipeline-image.sh  dataset-images.yml  dataset-labels.yml  docker-compose.yml  pyproject.toml  run_azureml.sh  setup_azureml.sh
pipeline/labels/: project-1-at-2024-12-23-22-37-9b90e95a.json
pipeline/preprocessing/: command.py  command.yml
pipeline/splitting/: .amlignore  command.py  command.yml
pipeline/training/: command.py  command.yml
webapp/: CHANGELOG.md  Caddyfile  Dockerfile  cz.toml  index.html  package-lock.json  package.json  vite.config.js
webapp/public/: ads.txt
webapp/src/: App.jsx  main.css  main.jsx
