[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["patacoing <romain.lefebvre1104@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
azure-identity = "^1.19.0"
azure-ai-ml = "^1.23.0"
model = { path = "../model" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
